2017,2018,fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,12 @@ footer{
     margin: 5px;
     
 }
+
+.card-subtitle {
+		
+		line-height:1.5;
+}
+
 .gallery_product .img-responsive:hover {
     
     opacity: 1;
